--- a/wp-content/themes/sheabel-theme/package.json
+++ b/wp-content/themes/sheabel-theme/package.json
@@ -34,7 +34,6 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.3",
-    "postcss-nested": "^4.2.1",
     "postcss-simple-vars": "^5.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -43,5 +42,9 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.1.7",
+    "postcss-nested": "^4.2.3"
   }
 }
