--- a/wp-content/themes/sheabel-theme/package.json
+++ b/wp-content/themes/sheabel-theme/package.json
@@ -38,13 +38,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0"
   },
   "devDependencies": {
     "postcss": "^8.1.7",
-    "postcss-nested": "^4.2.3"
+    "postcss-nested": "^4.2.3",
+    "webpack": "^4.44.2"
   }
 }
